--- a/lab1/battleship.css
+++ b/lab1/battleship.css
@@ -51,6 +51,56 @@ body {
     border: 1px solid var(--border);
     transition: 0.2s ease all;
     /* cursor: pointer; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cell.bang::before, .cell.miss::before {
+    background-color: var(--background-alt);
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    opacity: 0.5;
+    transition: 0.2s all ease-in-out;
+    content: "";
+    animation: ripple 0.8s ease-in-out;
+    filter: blur(5px);
+}
+
+.cell.bang::before {
+    background-color: red;
+}
+
+@keyframes ripple {
+    0% {
+        width: 0;
+        border-radius: 0;
+        height: 0;
+        filter: blur(5px);
+        opacity: 0.5;
+    }
+    50% {
+        width: 100%;
+        border-radius: 0;
+        height: 100%;
+        filter: blur(0px);  
+        opacity: 0.25;
+    }
+    75% {
+        width: 50%;
+        border-radius: 50%;
+        height: 50%;
+        filter: blur(5px);
+        opacity: 0.5;
+    }
+    100% {
+        width: 100%;
+        border-radius: 0;
+        height: 100%;
+        filter: blur(0px);
+        opacity: 0;
+    }
 }
 
 .cell.bang {
@@ -73,13 +123,13 @@ body {
         transform: scale(1), rotate(0deg);
     }
     25% {
-        transform: scale(1.08) rotate(5deg);
+        transform: scale(1.08) rotate(0deg);
     }
     50% {
         transform: scale(1) rotate(0deg);
     }
     75% {
-        transform: scale(1.08) rotate(-5deg);
+        transform: scale(1.08) rotate(-0deg);
     }
     100% {
         transform: scale(1) rotate(0deg);
@@ -122,7 +172,7 @@ body {
 .ship.p2 {
     border-color: var(--ship-border-p2);
     background: var(--ship-bg-p2);
-
+    visibility: hidden;
 }
 
 .ship.p1:hover {
@@ -160,8 +210,8 @@ body {
     background: var(--ship-hover-p2);
 } */
 
-.ship.p2 {
-    visibility: hidden;
+.ship.p2.revealed {
+    visibility: visible;
 }
 
 .ship.dead {
@@ -187,4 +237,10 @@ body {
 
 h2 {
     margin-bottom: 0;
+}
+
+.turn {
+    font-weight: bold;
+    flex-basis: 100%;
+    margin-top: 10px;
 }
