--- a/lab1/battleship.css
+++ b/lab1/battleship.css
@@ -43,6 +43,8 @@ body {
     width: 400px;
     height: 400px;
     /* overflow: hidden; */
+    grid-template-columns: 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px ;
+    grid-template-rows: 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px ;
 }
 
 .cell {
