--- a/lab1/battleship.css
+++ b/lab1/battleship.css
@@ -1,19 +1,34 @@
-* {
+.theme-light {
    --background: #f1f5f8;
    --background-alt: rgba(241, 245, 248, 0.75);
    --background-highlight: #bbd7f2;
    --border: rgba(0,0,0,0.08);
    --border-alt: rgba(0,0,0,0.2);
-
+   --text: #444; 
+   --button: #1886C4;
    --ship-border-p1: rgba(0,255,0,0.5);
    --ship-bg-p1: rgba(0, 255, 0, 0.15);
    --ship-hover-p1: rgba(0, 255, 0, 0.15);
    --ship-border-p2: rgba(255,0,0,0.5);
    --ship-bg-p2: rgba(255, 0, 0, 0.5);
    --ship-hover-p2: rgba(255, 0, 0, 0.15);
-
-   --text: #444; 
 }
+
+.theme-dark {
+    --background: #151824;
+    --background-alt: rgba(241, 245, 248, 0.75);
+    --background-highlight: #9baab8;
+    --border: rgba(255,255,255,0.3);
+    --border-alt: rgba(255,255,255,0.3);
+    --text: #fff; 
+    --button: #3dadee;
+    --ship-border-p1: rgba(0,255,0,0.5);
+    --ship-bg-p1: rgba(0, 255, 0, 0.25);
+    --ship-hover-p1: rgba(0, 255, 0, 0.25);
+    --ship-border-p2: rgba(255,0,0,0.5);
+    --ship-bg-p2: rgba(255, 0, 0, 0.5);
+    --ship-hover-p2: rgba(255, 0, 0, 0.15);
+ }
 
 body {
     font-family: 'Raleway', sans-serif;
@@ -21,8 +36,9 @@ body {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    background-color: var(--background);
     /* background-color: #2c3441; */
-    /* color: white; */
+    color: var(--text);
 }
 
 .container {
@@ -39,7 +55,7 @@ body {
     border: 1px solid var(--border-alt);
     border-radius: 8px;
     background: var(--background);
-    box-shadow: 0 22px 43px -20px rgba(255, 255, 255, 0.15);
+    box-shadow: 0 22px 43px -20px rgba(100, 100, 100, 0.2);
     width: 400px;
     height: 400px;
     /* overflow: hidden; */
@@ -48,11 +64,8 @@ body {
 }
 
 .cell {
-    /* width: 10px; */
-    /* height: 10px; */
     border: 1px solid var(--border);
     transition: 0.2s ease all;
-    /* cursor: pointer; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,6 +85,22 @@ body {
 
 .cell.bang::before {
     background-color: red;
+}
+
+.cell[title="[1, 1]"] {
+    border-top-left-radius: 8px;
+}
+
+.cell[title="[10, 1]"] {
+    border-top-right-radius: 8px;
+}
+
+.cell[title="[1, 10]"] {
+    border-bottom-left-radius: 8px;
+}
+
+.cell[title="[10, 10]"] {
+    border-bottom-right-radius: 8px;
 }
 
 @keyframes ripple {
@@ -156,10 +185,6 @@ body {
     }
 }
 
-.ship.selected {
-    animation: shipHighlight 0.25s infinite;
-}
-
 #grid-2.selectable > .cell {
     cursor: pointer;
 }
@@ -190,6 +215,9 @@ body {
 .ship.p1 {
     border-color: var(--ship-border-p1);
     background: var(--ship-bg-p1);
+}
+
+.ship.p1.draggable {
     cursor: grab;
 }
 
@@ -199,7 +227,7 @@ body {
     visibility: hidden;
 }
 
-.ship.p1:hover {
+.ship.p1.draggable:hover {
     transform: scale(1.08);
     backdrop-filter: blur(5px);
     z-index: 999;
@@ -267,4 +295,25 @@ h2 {
     font-weight: bold;
     flex-basis: 100%;
     margin-top: 10px;
+}
+
+
+button {
+    background-color: transparent;
+    display: block;
+    border: 1px solid var(--button);
+    border-radius: 8px;
+    cursor: pointer;
+    color: var(--button);
+    padding: 0.8em 1em;
+    font-size: 0.8em;
+    font-weight: bold;
+    transition: 0.3s ease all;
+    margin-bottom: 5px;
+    font-family: 'Raleway', sans-serif;
+}
+
+button:hover {
+    background-color: var(--button);
+    color: white;
 }
