--- a/lab1/battleship.css
+++ b/lab1/battleship.css
@@ -323,6 +323,7 @@ button:hover {
     flex-direction: column;
     flex-basis: 100%;
     position: fixed;
+    bottom: 0;
     width: -webkit-fill-available;
     margin: 10px;
     font-size: 12px;
