--- a/lab1/battleship.css
+++ b/lab1/battleship.css
@@ -1,6 +1,6 @@
 .theme-light {
    --background: #f1f5f8;
-   --background-alt: rgba(241, 245, 248, 0.75);
+   --background-alt: #e2e9efbf;
    --background-highlight: #bbd7f2;
    --border: rgba(0,0,0,0.08);
    --border-alt: rgba(0,0,0,0.2);
@@ -298,7 +298,7 @@ h2 {
 }
 
 
-button {
+button, input[type=number] {
     background-color: transparent;
     display: block;
     border: 1px solid var(--button);
@@ -318,13 +318,64 @@ button:hover {
     color: white;
 }
 
+input[type=number] {
+    padding: 0.5em 0.7em;
+    width: 35px;
+}
+
 .footer {
     display: flex;
     flex-direction: column;
-    flex-basis: 100%;
     position: fixed;
     bottom: 0;
-    width: -webkit-fill-available;
+    left: 0;
+    width: auto;
     margin: 10px;
     font-size: 12px;
+}
+
+div#ship-builder {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-basis: 33%;
+    border: 1px solid var(--border-alt);
+    border-radius: 8px;
+    padding: 10px;
+    background-color: var(--background);
+    box-shadow: 0 22px 43px -20px rgba(100, 100, 100, 0.2);
+}
+
+div#ship-builder > h2 {
+    margin-bottom:10px;
+    margin-top: 0;
+}
+
+.group {
+    flex-basis: 100%;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    padding: 5px;
+    border-top: 1px solid var(--border);
+    background-color: transparent;
+    transition: 0.2s all;
+}
+
+.group:hover {
+    background-color: var(--background-alt);
+}
+
+.group:last-of-type {
+    border-bottom: 1px solid var(--border);
+}
+
+div#ship-builder > button {
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.group > label:first-child {
+    font-weight: bold;
 }
