--- a/lab1/battleship.css
+++ b/lab1/battleship.css
@@ -41,7 +41,6 @@ body {
 }
 
 .container {
-    margin-top: 20px;
     margin-bottom: 20px;
     flex-basis: 50%;
     display: flex;
@@ -145,7 +144,7 @@ body {
 
 .ship.warn {
     animation: cellHighlight 0.6s ease-in-out;
-    background-color: red !important;
+    background-color: rgba(255, 63, 63, 0.753) !important;
 }
 
 @keyframes cellHighlight {
