--- a/lab1/battleship.css
+++ b/lab1/battleship.css
@@ -323,6 +323,11 @@ button:hover {
     background-color: var(--background);
 }
 
+.ship-count:disabled {
+    color: grey;
+    border-color: grey;
+}
+
 .footer {
     display: flex;
     flex-direction: column;
