--- a/lab2/exercise5/my-blog/src/App.css
+++ b/lab2/exercise5/my-blog/src/App.css
@@ -1,8 +1,127 @@
-nav > a {
-  padding: 5px;
-  border-right:1px solid;
+* {
+  --foreground: #000;
+  --background: #fff;
+  --background-alt: #fff;
+  --background-transparent: rgba(241, 245, 248, 0.75);
+  --theme: #0066ab;
+  --theme-alt: #06e0d0;
+  --text: #444;
+  --text-alt: #151824;
+  --border: rgba(0, 0, 0, 0.25);
+  --border-alt: rgba(0, 0, 0, 0.08);
+  --border-radius: 5px;
+  --scrollbar: rgba(21, 24, 36, 0.75);
+  --shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+  --shadow-alt: 0 3px 6px rgba(199, 121, 206, 0.5);
+  --err: #f45a5a;
 }
 
-nav > a:last-child {
-  border-right: none;
+nav > a {
+  margin-top: 5px;
+  padding-bottom: 5px;
+  position: relative;
+  font-weight: bold;
+  color: var(--text);
+  text-decoration: none;
+  transition: 0.2s all;
+}
+
+nav > a:hover {
+  color: var(--theme);
+}
+
+nav > a::before {
+  width: 0;
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  transition: 0.2s all;
+  z-index: -1;
+  background-color: var(--theme);
+  height: 2px;
+  bottom: 5px;
+  opacity: 0.5;
+}
+
+
+nav > a:hover::before {
+  width: 100%;
+  left: 0;
+  right: 0;
+}
+
+nav > .spacer {
+  margin: 10px;
+  opacity: 0.25;
+}
+
+nav {
+  box-shadow: 0 0 0 1px var(--border-alt);
+  padding: 5px 10%;
+}
+
+.content {
+  padding: 5px 10%;
+}
+
+.content > h2 {
+  color: var(--text);
+  text-decoration: underline;
+}
+
+body {
+  /* padding:0 20%; */
+  font-family: 'Gilroy', 'Raleway', sans-serif;
+}
+
+.post, form {
+  border: 1px solid var(--border-alt);
+  border-radius: var(--border-radius);
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: var(--background-transparent);
+  box-shadow: var(--shadow);
+  transition: 0.2s ease;
+  color: var(--text);
+}
+
+input, textarea {
+  height: 30px;
+  color: var(--text);
+  border-radius: var(--border-radius);
+  border: 1px solid var(--border-alt);
+  background-color: var(--background-alt);
+  display: inline-block;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 230px;
+  padding-left: 5px;
+  font-family: "Raleway";
+}
+
+label {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+button {
+  background-color: transparent;
+  display: block;
+  border: 1px solid var(--theme);
+  border-radius: 8px;
+  cursor: pointer;
+  color: var(--theme);
+  padding: 0.6em 1em;
+  font-size: 0.8em;
+  font-weight: bold;
+  transition: 0.3s ease all;
+  margin-bottom: 5px;
+  font-family: 'Raleway', sans-serif;
+}
+
+button:hover {
+  background-color: var(--theme);
+  color: white;
 }
